Project

General

Profile

Actions

Bug #15441

closed

LibRadosWatchNotify.WatchNotify2Timeout

Added by Sage Weil about 8 years ago. Updated about 8 years ago.

Status:
Resolved
Priority:
Immediate
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2016-04-08T15:36:11.495 INFO:tasks.workunit.client.0.smithi055.stdout:         api_watch_notify: [ RUN      ] LibRadosWatchNotify.WatchNotify2Timeout
2016-04-08T15:36:11.495 INFO:tasks.workunit.client.0.smithi055.stdout:         api_watch_notify: watch_notify2_test_cb from 4130 notify_id 219043332099 cookie 140691212406000
2016-04-08T15:36:11.496 INFO:tasks.workunit.client.0.smithi055.stdout:         api_watch_notify: watch_notify2_test_cb from 4130 notify_id 223338299396 cookie 140691212406000
2016-04-08T15:36:11.496 INFO:tasks.workunit.client.0.smithi055.stdout:         api_watch_notify: watch_notify2_test_cb from 4130 notify_id 223338299397 cookie 140691212406000
2016-04-08T15:36:11.496 INFO:tasks.workunit.client.0.smithi055.stdout:         api_watch_notify: watch_notify2_test_errcb cookie 140691212406000 err -110
2016-04-08T15:36:11.496 INFO:tasks.workunit.client.0.smithi055.stdout:         api_watch_notify: test/librados/watch_notify.cc:725: Failure
2016-04-08T15:36:11.496 INFO:tasks.workunit.client.0.smithi055.stdout:         api_watch_notify: Expected: (rados_watch_check(ioctx, handle)) > (0), actual: -110 vs 0
2016-04-08T15:36:11.496 INFO:tasks.workunit.client.0.smithi055.stdout:         api_watch_notify: [  FAILED  ] LibRadosWatchNotify.WatchNotify2Timeout (3025 ms)

/a/sage-2016-04-07_14:41:26-rados-wip-sage-testing-distro-basic-smithi/114670
Actions #1

Updated by Sage Weil about 8 years ago

  • Status changed from 12 to In Progress
  • Assignee set to Sage Weil

It looks like when we reconnect, we don't unlink the old connection from the watch. I.e., WatchConState::removeWatch() isn't called (it's only caller is discard_state, which is when the watch dies).

Actions #2

Updated by Sage Weil about 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #3

Updated by Sage Weil about 8 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF